# gears-rust

./: .cf-studio-kit.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  dylint.toml  release-plz.toml
config/: e2e-local.yaml  e2e-scope-enforcement.yaml  no-auth.yaml  (+10 more)
examples/oop-gears/calculator-gateway/calculator-gateway-sdk/: Cargo.toml
examples/oop-gears/calculator-gateway/calculator-gateway-sdk/src/: api.rs  client.rs  lib.rs  wiring.rs
examples/oop-gears/calculator/calculator/: Cargo.toml
examples/oop-gears/calculator/calculator-sdk/: Cargo.toml  build.rs
examples/oop-gears/calculator/calculator-sdk/proto/oop/calculator/v1/: accum.proto
examples/oop-gears/calculator/calculator-sdk/src/: api.rs  client.rs  lib.rs  wiring.rs
examples/oop-gears/calculator/calculator/src/: gear.rs  lib.rs  main.rs  registered_gears.rs
examples/oop-gears/calculator/calculator/src/api/: mod.rs
examples/oop-gears/calculator/calculator/src/api/grpc/: mod.rs  server.rs
examples/oop-gears/calculator/calculator/src/domain/: mod.rs  service.rs
examples/toolkit/users-info/users-info-sdk/: Cargo.toml
examples/toolkit/users-info/users-info-sdk/src/: client.rs  gts.rs  lib.rs  models.rs
examples/toolkit/users-info/users-info-sdk/src/odata/: mod.rs
gears/mini-chat/plugins/static-model-policy-plugin/: Cargo.toml
gears/simple-user-settings/simple-user-settings-sdk/: Cargo.toml  README.md
gears/simple-user-settings/simple-user-settings-sdk/src/: api.rs  lib.rs  models.rs
gears/system/authn-resolver/authn-resolver/: Cargo.toml  README.md
gears/system/authn-resolver/authn-resolver/src/: gear.rs  lib.rs
gears/system/authn-resolver/authn-resolver/src/domain/: local_client.rs
gears/system/authz-resolver/authz-resolver/: Cargo.toml  README.md
gears/system/authz-resolver/authz-resolver/src/: gear.rs  lib.rs
gears/system/nodes-registry/nodes-registry-sdk/: Cargo.toml  README.md
gears/system/nodes-registry/nodes-registry-sdk/src/: error.rs
gears/system/resource-group/resource-group/: Cargo.toml  README.md
gears/system/resource-group/resource-group-sdk/: Cargo.toml  README.md
gears/system/resource-group/resource-group-sdk/src/: api.rs  error.rs  error_tests.rs  field.rs  gts.rs  lib.rs  models.rs  precondition.rs  reason.rs
gears/system/resource-group/resource-group/src/: gear.rs  lib.rs
gears/system/resource-group/resource-group/src/api/: mod.rs
gears/system/resource-group/resource-group/src/api/rest/: error.rs  mod.rs
gears/system/resource-group/resource-group/src/domain/: error.rs  group_service.rs  membership_service.rs  mod.rs  read_service.rs  rg_service.rs  seeding.rs
gears/system/resource-group/resource-group/src/infra/: mod.rs
gears/system/resource-group/resource-group/src/infra/storage/: odata_mapper.rs
gears/system/resource-group/resource-group/tests/: domain_unit_test.rs  type_service_test.rs
gears/system/types-registry/types-registry-sdk/: Cargo.toml  README.md
gears/system/types-registry/types-registry-sdk/src/: api.rs  error.rs  error_tests.rs  lib.rs  models.rs
libs/modkit-gts/: Cargo.toml  README.md
libs/modkit-gts-macros/: Cargo.toml  README.md
libs/modkit-gts-macros/src/: lib.rs
libs/modkit-gts/src/: lib.rs  permission.rs  plugin.rs
libs/modkit-gts/tests/: macro_integration.rs
libs/rustls-corecrypto-provider/: Cargo.toml  README.md
libs/rustls-corecrypto-provider/src/: oe.rs
libs/rustls-corecrypto-provider/src/ffi/: commoncrypto.rs
libs/rustls-corecrypto-provider/src/signer/: ec.rs
modules/system/account-management/account-management/: Cargo.toml
modules/system/account-management/account-management-sdk/: Cargo.toml
modules/system/account-management/account-management-sdk/src/: client.rs  error.rs  error_tests.rs  gts.rs  gts_envelopes.rs  idp.rs  idp_tests.rs  idp_user.rs  idp_user_tests.rs  lib.rs  metadata.rs  metadata_tests.rs  tenant.rs  tenant_tests.rs
modules/system/account-management/account-management/src/: client.rs  config.rs  config_tests.rs  module.rs  module_tests.rs
modules/system/account-management/account-management/src/api/rest/: dto.rs  dto_tests.rs
modules/system/account-management/account-management/src/domain/: authz.rs  error.rs  error_tests.rs  gts_validation.rs  gts_validation_tests.rs  mod.rs
modules/system/account-management/account-management/src/domain/bootstrap/: config.rs  config_tests.rs  service.rs  service_tests.rs
modules/system/account-management/account-management/src/domain/conversion/: mod.rs  model.rs  repo.rs  service.rs  service_tests.rs  state_machine.rs  state_machine_tests.rs
modules/system/account-management/account-management/src/domain/idp/: idp_tests.rs  mod.rs
modules/system/account-management/account-management/src/domain/metadata/: mod.rs  registry.rs  repo.rs  service.rs  service_tests.rs  type_id.rs  type_id_tests.rs
modules/system/account-management/account-management/src/domain/tenant/: context.rs  mod.rs  model.rs  model_tests.rs  repo.rs  retention.rs
modules/system/account-management/account-management/src/domain/user/: mod.rs  service.rs  service_tests.rs
modules/system/account-management/account-management/src/infra/: canonical_mapping.rs  canonical_mapping_tests.rs  error_conv.rs  error_conv_tests.rs  mod.rs  sdk_error_mapping.rs  sdk_error_mapping_tests.rs
modules/system/account-management/account-management/src/infra/idp/: lazy.rs  lazy_tests.rs  mod.rs  noop_tests.rs
modules/system/account-management/account-management/src/infra/types_registry/: metadata_schema_registry.rs
modules/system/account-management/account-management/tests/: api_metadata_test.rs  conversion_integration.rs  conversion_integration_pg.rs  lifecycle_integration.rs  metadata_integration.rs  metadata_integration_pg.rs
modules/system/account-management/account-management/tests/common/: mod.rs
modules/system/account-management/plugins/static-idp-plugin/: Cargo.toml
modules/system/account-management/plugins/static-idp-plugin/src/domain/: client_tests.rs
modules/system/authn-resolver/plugins/oidc-authn-plugin/: Cargo.toml
(+1101 files in other folders)
