[package]
name = "cyberware-modkit-gts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit GTS integration — link-time inventory of shipped GTS schemas and instances plus a small set of platform base types"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "modkit_gts"

[lints]
workspace = true

[dependencies]
# Workspace deps
modkit-gts-macros = { workspace = true }
gts = { workspace = true }
gts-macros = { workspace = true }

# Core
anyhow = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
