[package]
name = "cf-gears-simple-user-settings-sdk"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SDK for simple-user-settings gear: API trait, types, and error definitions"
repository.workspace = true
readme = "README.md"
keywords = ["constructorfabric", "cf-gears"]
categories = ["web-programming"]

[lib]
name = "simple_user_settings_sdk"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

toolkit = { workspace = true }
toolkit-canonical-errors = { workspace = true }
toolkit-macros = { workspace = true }
toolkit-security = { workspace = true }
