[package]
name = "calculator-sdk"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SDK for calculator gear: API trait, types, gRPC client, and wiring helpers"
build = "build.rs"

[dependencies]
# Core dependencies for API trait
async-trait = { workspace = true }
thiserror = { workspace = true }
toolkit-security = { workspace = true }

# gRPC transport dependencies
toolkit-transport-grpc = { workspace = true }
toolkit = { workspace = true }
cf-gears-system-sdks = { workspace = true, features = ["directory"] }
tonic = { workspace = true, features = ["transport"] }
tonic-prost = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
