[package]
name = "calculator"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Calculator module - example OoP gRPC service"

[features]
default = []
oop_module = ["tokio"]
oop_example = ["oop_module"]

[[bin]]
name = "calculator-oop"
path = "src/main.rs"
required-features = ["oop_module"]

[dependencies]
# SDK contains API trait, gRPC client, and proto stubs
calculator-sdk = { path = "../calculator-sdk" }

# ToolKit dependencies
toolkit = { workspace = true, features = ["bootstrap"] }
toolkit-macros = { workspace = true }
toolkit-security = { workspace = true }
toolkit-transport-grpc = { workspace = true }
grpc_hub = { workspace = true }

# Runtime dependencies
tonic = { workspace = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
