[package]
name = "cf-gears-authn-resolver"
version = "0.2.16"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AuthN resolver gear - discovers and routes to plugins"
repository.workspace = true
readme = "README.md"
keywords = ["constructorfabric", "cf-gears"]
categories = ["authentication"]
metadata.docs.rs.all-features = true

[lib]
name = "authn_resolver"

[lints]
workspace = true

[dependencies]
# Local dependencies
authn-resolver-sdk = { package = "cf-gears-authn-resolver-sdk", version = "0.3.16", path = "../authn-resolver-sdk" }
types-registry-sdk = { package = "cf-gears-types-registry-sdk", version = "0.2.3", path = "../../types-registry/types-registry-sdk" }

# ToolKit dependencies
toolkit = { workspace = true }
toolkit-macros = { workspace = true }
toolkit-security = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Data types
uuid = { workspace = true }

# Error handling and serialization
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Required by toolkit::gear macro
inventory = { workspace = true }

# Logging
tracing = { workspace = true }
