[package]
name = "cf-gears-nodes-registry-sdk"
version = "0.1.21"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SDK for nodes_registry gear: API trait, node models, and error definitions"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "nodes_registry_sdk"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

toolkit-node-info = { workspace = true }
