# Created: 2026-04-16 by Constructor Tech
[package]
name = "cf-gears-resource-group"
version = "0.1.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Resource Group gear: hierarchical resource group management with GTS type system"
repository.workspace = true
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "resource-group"]
categories = ["web-programming"]
metadata.docs.rs.all-features = true

[lints]
workspace = true

[features]
default = ["odata"]
odata = []

[dependencies]
# SDK - public API, models, and errors
resource-group-sdk = { package = "cf-gears-resource-group-sdk", version = "0.1.4", path = "../resource-group-sdk", features = ["odata"] }

# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

# Serde and JSON schema
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
utoipa = { workspace = true, features = ["time"] }

# HTTP and REST
axum = { workspace = true, features = ["macros"] }
http = { workspace = true }

# Time handling
time = { workspace = true }

# UUID support
uuid = { workspace = true }

# Database - SeaORM
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Error handling
thiserror = { workspace = true }

# AuthZ
authz-resolver-sdk = { workspace = true }

# GTS type system — types registry for schema resolution
types-registry-sdk = { workspace = true }
gts = { workspace = true }

# Local dependencies
toolkit = { workspace = true }
toolkit-canonical-errors = { workspace = true }
toolkit-db = { workspace = true, features = ["sqlite", "pg"] }
toolkit-db-macros = { workspace = true }
toolkit-security = { workspace = true }
toolkit-odata = { workspace = true, features = ["with-utoipa"] }
toolkit-macros = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toolkit-db = { workspace = true, features = ["sqlite"] }
tower = { workspace = true }
http-body-util = { workspace = true }
