[package]
name = "cf-gears-types-registry-sdk"
version = "0.2.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SDK for types-registry gear: API trait, GTS entity types, and error definitions"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "types_registry_sdk"

[lints]
workspace = true

[features]
# Default: production build, no test utilities.
default = []
# Exposes `pub mod testing` with a stateful `MockTypesRegistryClient` mock for
# consumers that need a `dyn TypesRegistryClient` in their unit tests.
test-util = []

[dependencies]
# Core dependencies for API trait
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
serde_json = { workspace = true }

# GTS types (from git dependency)
gts = { workspace = true }
