[package]
name = "cyberware-account-management-sdk"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Account Management SDK — public inter-module contracts (canonical-errors re-export, IdP provisioner client trait, tenant CRUD input/output shapes)"
repository.workspace = true
keywords = ["cyberfabric", "cyberware", "cyberfabric-system"]
categories = ["web-programming"]

[lib]
name = "account_management_sdk"

[lints]
workspace = true

[dependencies]
# AM's public inter-module error surface is the AIP-193 `CanonicalError`
# from `modkit-canonical-errors`. The SDK re-exports it as
# `AccountManagementError` for naming continuity with the
# `resource-group-sdk` / `tenant-resolver-sdk` pattern.
modkit-canonical-errors = { workspace = true }

# IdP provisioner contract (trait + DTO) consumed by AM and implemented
# by deployment-specific IdP plugins. Lives in the SDK so plugin authors
# depend on the thin contract crate, not on the full impl crate.
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
# Typed wrapper for chained GTS schema identifiers carried by SDK
# inputs (`CreateChildInput.tenant_type`, `ProvisionRequest.tenant_type`).
# Wire shape stays a string; the type is a documentation +
# JSON-schema hint that the field is a chained `gts.X.v1~Y.v1~`
# identifier rather than an arbitrary string. AM-side consumers
# pass `&str` through `gts::GtsID::new` for full chain validation.
gts = { workspace = true }

# Tenant-resolver SDK is the canonical home for the public-facing
# `TenantInfo` / `TenantStatus` shapes (slim, no internal storage
# fields). AM's tenant CRUD output reuses these directly so the
# resolver and AM speak the same vocabulary on the public boundary.
tenant-resolver-sdk = { workspace = true }

# `IdpPluginClient::list_users` returns `modkit_odata::Page<User>` —
# the same cursor-based pagination envelope already used by RG and
# tenant-resolver SDKs. AM is a transparent forwarder of the
# `Option<String>` cursor; the IdP plugin owns the cursor format
# (filter-hash consistency, sort-key stability — see
# `libs/modkit-odata/src/pagination.rs`) or wraps a native vendor
# cursor (e.g. Zitadel `next_token`).
modkit-odata = { workspace = true }

# `modkit-gts::gts_type_schema` powers compile-time validation for
# the `IdpPluginSpecV1` plugin-discovery type (mirrors
# `AuthNResolverPluginSpecV1` in `authn-resolver-sdk/src/gts.rs`).
# `modkit` ships `PluginV1<P>` (re-exported from `modkit-gts`);
# `schemars` is the runtime JSON-Schema reflection backend the
# macro generates code against.
gts-macros = { workspace = true }
modkit = { workspace = true }
modkit-gts = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
