[package]
name = "cyberware-account-management"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Account Management module — tenant hierarchy storage floor"
repository.workspace = true
keywords = ["cyberfabric", "cyberware", "cyberfabric-system"]
categories = ["web-programming"]

[lib]
name = "account_management"

[lints]
workspace = true

[dependencies]
account-management-sdk = { workspace = true }

modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }
modkit-db = { workspace = true, features = ["sqlite", "pg"] }
modkit-db-macros = { workspace = true }
modkit-canonical-errors = { workspace = true, features = ["sea-orm"] }
modkit-odata = { workspace = true }
modkit-utils = { workspace = true, features = ["humantime-serde"] }
resource-group-sdk = { workspace = true }
tenant-resolver-sdk = { workspace = true }
types-registry-sdk = { workspace = true }
gts = { workspace = true }

uuid = { workspace = true, features = ["v4", "serde"] }
time = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

async-trait = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
jsonschema = { workspace = true }
parking_lot = { workspace = true }

sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

tracing = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-util = { workspace = true }

anyhow = { workspace = true }

authz-resolver-sdk = { workspace = true }

[features]
# Gates the Postgres-backed real-DB integration tests. Disabled by
# default because they spin up a `testcontainers` Docker container
# per test; enable with `--features postgres` when Docker is
# available locally or in CI.
postgres = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
types-registry-sdk = { workspace = true, features = ["test-util"] }
proptest = "1.5"
# `no-env-filter` accepts events with `target: "am.*"` (otherwise the
# default `{crate}=trace` filter rejects custom targets, hiding the
# very `am.retention` events the redaction tests need to inspect).
tracing-test = { workspace = true, features = ["no-env-filter"] }
# Postgres bring-up for the integration suite. Pulled in
# unconditionally because `[dev-dependencies]` cannot be made
# `optional`, but every reference to these crates is gated behind
# `#[cfg(feature = "postgres")]` so a default `cargo test` does
# not require Docker.
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
